# simple-backpropagation-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  flake.nix
include/: MLP.hpp  formatting.h  formatting.hpp  layer.hpp  neuron.hpp  value.h  value.hpp
include/util/: graphing.h  graphing.hpp
src/: MLP.cpp  layer.cpp  main.cpp  neuron.cpp  value.cpp
src/util/: graphing.cpp
